<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestionActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="357dp"
        android:layout_height="518dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_activity_add_questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/playerOneButton"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player1" />

        <Button
            android:id="@+id/playerTwoButton"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player2" />

        <Button
            android:id="@+id/addQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addQuestion" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>